# your-second-recsys

./: .gitignore  README.md
competition/: RecSys_notebook_Baseline.ipynb  RecSys_notebook_EDA.ipynb  RecSys_top.ipynb  requirements.txt  tools.py
lecture_2/: Practice.ipynb  requirements.txt
lecture_4/: Dockerfile  Readme.md  main.py  pyproject.toml
lecture_4/ann/: recommender.py
lecture_4/config/: config.py  config.yaml
lecture_4/data/: item_mappings.pkl  item_vectors.pkl
lecture_5/: README.md  requirements.txt  tools.py  tutorial_hybrid_model.ipynb
lecture_6/: ods_mts_recsys_dssm_code.ipynb
