[tool.poetry]
name = "ann"
version = "0.1.0"
description = ""
authors = ["Alexander Butenko <a.butenko.o@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
hydra-core = "^1.1.1"
annoy = "^1.17.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
isort = "^5.9.3"
pylint = "^2.10.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
